--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <version>0.208</version>
+    <parent>
+        <groupId>com.facebook.presto</groupId>
+        <artifactId>presto-root</artifactId>
+        <version>0.208</version>
+    </parent>
 
     <groupId>com.facebook.presto</groupId>
     <artifactId>presto-vertica-connector</artifactId>
@@ -20,54 +24,15 @@
     </developers>
 
     <properties>
-        <presto.version>0.208</presto.version>
-        <validationApi.version>1.1.0.Final</validationApi.version>
-        <javaxInject.version>1</javaxInject.version>
-        <jackson.version>2.4.4</jackson.version>
-        <log4j.version>1.2.17</log4j.version>
-
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
+        <version>${project.parent.version}</version>
+        <air.check.skip-all>true</air.check.skip-all>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.facebook.presto</groupId>
             <artifactId>presto-base-jdbc</artifactId>
-            <version>${presto.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>${validationApi.version}</version>
-        </dependency>
-        <!-- Presto SPI -->
-        <dependency>
-            <groupId>com.facebook.presto</groupId>
-            <artifactId>presto-spi</artifactId>
-            <version>${presto.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-            <version>${javaxInject.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>${log4j.version}</version>
+            <version>${version}</version>
         </dependency>
         <dependency>
             <groupId>com.vertica.jdbc</groupId>
@@ -90,6 +55,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
